--- a/BulkyBook.Web/BulkyBook.Web.csproj
+++ b/BulkyBook.Web/BulkyBook.Web.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\BulkyBook.DataAccess\BulkyBook.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
